create contact section

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -13,8 +13,17 @@
 </head>
 <body>
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container">
-    <h1>Hello Contact</h1>
+<div class="container mt-5">
+    <div class="h3">Hello World</div>
+    <div class="lead mb-2">
+        If you liked this project feel free to contact me by:
+    </div>
+    <ul>
+        <li><p>Messaging <a class="link-dark" href="#">xDavide9#1490</a> on Discord</p></li>
+        <li><p>Sending an Email to <a class="link-dark" href="mailto: biancodavidetech@gmail.com">
+            biancodavidetech@gmail.com</a></p></li>
+        <li><p>Using any of the social networks at the bottom of the page.</p></li>
+    </ul>
 </div>
 <div th:insert="fragments/footer.html :: footer"></div>
 <script crossorigin="anonymous"
