--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -14,7 +14,7 @@
 <body>
 
 <div th:insert="fragments/header.html :: header"></div>
-<div class="container d-flex mt-5 position-relative">
+<div class="container d-flex flex-column flex-lg-row mt-5 position-relative gap-3 gap-lg-0 text-center-portrait">
     <div>
         <div class="h3">
             Account Information
@@ -23,7 +23,7 @@
             Change Username or Password
         </div>
     </div>
-    <div class="text-center position-absolute end-0">
+    <div class="position-absolute-end-0-lg">
         <a class="btn btn-dark btn-lg" href="/sales" role="button">Start Selling Now</a>
     </div>
 </div>
