--- a/src/main/resources/templates/sales.html
+++ b/src/main/resources/templates/sales.html
@@ -44,7 +44,7 @@
         </form>
     </div>
 </div>
-<div class="container d-flex mt-5 position-relative">
+<div class="container d-flex flex-column flex-lg-row mt-5 position-relative gap-3 gap-lg-0 text-center-portrait">
     <div>
         <div class="h3">
             Available Deals
@@ -55,7 +55,7 @@
             </a>
         </div>
     </div>
-    <div class="text-center position-absolute end-0">
+    <div class="text-center position-absolute-end-0-lg">
         <button aria-controls="new-sale" class="btn btn-dark btn-lg" data-bs-target="#new-sale"
                 data-bs-toggle="offcanvas"
                 type="button">
