improve spacing in contact section

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -14,8 +14,8 @@
 <body>
 <div th:insert="fragments/header.html :: header"></div>
 <div class="container mt-5">
-    <div class="h3">Hello World</div>
-    <div class="lead mb-2">
+    <div class="h3 mb-3">Hello World</div>
+    <div class="lead mb-3">
         If you liked this project feel free to contact me by:
     </div>
     <ul>
