add size constraints to title and description labels in sales form, various fixes

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -24,6 +24,10 @@ a.desktop {
     display: none;
 }
 
+textarea {
+    height: 80px;
+}
+
 @media (orientation: portrait) {
     .text-center-portrait {
         text-align: center;
