create thanks template to thank user after submitting

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1>Error 404</h1>
-    <p>We could not find the page you were looking for.</p>
-    <a class="link-dark" href="/">Home</a>
+    <div class="h3">Error 404</div>
+    <div class="lead mb-1">We could not find the page you were looking for.</div>
+    <a class="link-dark lead" href="/">Home</a>
 </div>
 <div th:insert="fragments/footer.html :: footer"></div>
 <script crossorigin="anonymous"
